# learn-fastapi

./: README.md  pyproject.toml
learn_fastapi/chapter1/: main.py
