[tool.poetry]
name = "learn-fastapi"
version = "0.1.0"
description = ""
authors = ["yawtalkstechs <yawtalkstechs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.109.2"}
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
